name:                  ambiata-snooze
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@amiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              snooze
category:              Web
cabal-version:         >= 1.8
build-type:            Simple
description:           snooze.

library
  build-depends:
                       base                            >= 3          && < 5
                     , aeson                           >= 0.8        && < 1.2
                     , ambiata-p
                     , ambiata-twine
                     , ambiata-x-eithert
                     , attoparsec                      >= 0.12       && < 0.14
                     , blaze-builder                   >= 0.3        && <= 0.5
                     , bytestring                      == 0.10.*
                     , containers                      == 0.5.*
                     , data-default                    >= 0.5        && < 0.7
                     , exceptions                      >= 0.6        && < 0.9
                     , http-client                     >= 0.4.18     && < 0.6
                     , http-types                      >= 0.8        && < 0.10
                     , MonadRandom                     == 0.4.*
                     , mtl                             == 2.2.*
                     , random-shuffle                  == 0.0.4.*
                     , retry                           == 0.7.*
                     , text                            >= 1.1        && < 1.3
                     , template-haskell
                     , transformers                    >= 0.3        && < 0.6

  ghc-options:         -Wall -O2

  hs-source-dirs:
                       src

  exposed-modules:
                       Snooze

                       Snooze.Balance
                       Snooze.Core
                       Snooze.Data
                       Snooze.Json
                       Snooze.Text
                       Snooze.Url

                       Snooze.Balance.Control
                       Snooze.Balance.Core
                       Snooze.Balance.Data
                       Snooze.Balance.Http
                       Snooze.Balance.Serial


test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  if impl(ghc >= 8.0)
    ghc-options:
                       -Wno-warnings-deprecations
  hs-source-dirs:      test
  build-depends:       base
                     , ambiata-disorder-aeson
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-snooze
                     , ambiata-twine
                     , ambiata-x-eithert
                     , http-client
                     , QuickCheck                      >= 2.7        && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , text

test-suite test-io
  type:                exitcode-stdio-1.0
  main-is:             test-io.hs
  ghc-options:         -Wall -threaded -O2
  if impl(ghc >= 8.0)
    ghc-options:
                       -Wno-warnings-deprecations
  hs-source-dirs:      test
  build-depends:       base
                     , QuickCheck
                     , aeson
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-snooze
                     , bytestring
                     , containers
                     , data-default                    >= 0.5        && < 0.7
                     , http-client
                     , http-types
                     , network
                     , quickcheck-instances
                     , random
                     , retry
                     , scotty                          >= 0.8        && < 0.12
                     , text
                     , wai
