name:                  snooze
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@amiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              snooze
category:              Web
cabal-version:         >= 1.8
build-type:            Simple
description:           snooze.

library
  build-depends:
                       aeson                           == 0.8.*
                     , attoparsec                      >= 0.12       && < 0.14
                     , base                            >= 3          && < 5
                     , blaze-builder                   >= 0.3        && <= 0.5
                     , bytestring                      == 0.10.*
                     , containers                      == 0.5.*
                     , exceptions                      == 0.8.*
                     , http-client                     == 0.4.*
                     , http-types                      == 0.8.*
                     , MonadRandom                     == 0.4.*
                     , mtl                             == 2.2.*
                     , p
                     , random-shuffle                  == 0.0.4.*
                     , retry                           == 0.6.*
                     , twine                           == 0.0.1
                     , text                            >= 1.1        && < 1.3
                     , template-haskell
                     , transformers                    >= 0.3        && < 0.5
                     , either                          >= 4.3        && < 4.5

  ghc-options:         -Wall -O2

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_snooze
                       Snooze

                       Snooze.Balance
                       Snooze.Core
                       Snooze.Json
                       Snooze.Text
                       Snooze.Url

                       Snooze.Balance.Core
                       Snooze.Balance.Data
                       Snooze.Balance.Serial


test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , disorder-aeson
                     , disorder-core
                     , disorder-corpus
                     , http-client
                     , p
                     , snooze
                     , twine                           == 0.0.1
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , text
                     , either                          >= 4.3        && < 4.5

test-suite test-io
  type:                exitcode-stdio-1.0
  main-is:             test-io.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       aeson
                     , base
                     , bytestring
                     , containers
                     , http-client
                     , http-types
                     , aeson
                     , disorder-core
                     , disorder-corpus
                     , network
                     , p
                     , scotty                          >= 0.8        && < 0.10
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , random
                     , retry
                     , snooze
                     , text
                     , wai
