name:                  ambiata-snooze-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-snooze
                     , ambiata-twine
                     , exceptions
                     , http-client
                     , QuickCheck
                     , quickcheck-instances
                     , random
                     , scotty
                     , text
                     , wai
                     , retry                      == 0.7.*
                     , network                    == 2.6.*

  exposed-modules:
                       Test.IO.Snooze.Server
                       Test.Snooze.Arbitrary
