name:                  snooze-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base
                     , disorder-corpus
                     , exceptions
                     , p
                     , QuickCheck
                     , quickcheck-instances
                     , scotty
                     , snooze
                     , text
                     , wai
                     , streaming-commons          == 0.1.12.*
                     , twine                      == 0.0.1
                     , retry                      == 0.6.*
                     , network                    == 2.6.*

  exposed-modules:
                       Test.Snooze.Arbitrary
                       Test.Snooze.Server
