name:                  ambiata-snooze-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base
                     , ambiata-disorder-corpus
                     , exceptions
                     , http-client
                     , ambiata-p
                     , QuickCheck
                     , quickcheck-instances
                     , random
                     , scotty
                     , ambiata-snooze
                     , text
                     , wai
                     , ambiata-twine
                     , retry                      == 0.6.*
                     , network                    == 2.6.*

  exposed-modules:
                       Test.Snooze.Arbitrary
                       Test.Snooze.Server
