name:                  ambiata-snooze-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base
                     , disorder-corpus
                     , exceptions
                     , ambiata-p
                     , QuickCheck
                     , quickcheck-instances
                     , random
                     , scotty
                     , ambiata-snooze
                     , text
                     , wai

  exposed-modules:
                       Test.Snooze.Arbitrary
                       Test.Snooze.Server
